tests/fixtures/invalid/pow_float_str_list.py
# Cannot call pow() with Float, Str, List[int]
x = pow(1.0, "hello", [1, 2, 3])
